xmlui/src/components/Theme/Theme.module.scss
@use "@components-core/theming/themes" as t;

.from, .to{
  display: none;
}

.baseRootComponent {
  container-type: size;
  container-name: app-container;
  width: 100%;
  position: relative;
  height: inherit;
  font-family: t.$font-family;
  background-color: t.$color-bg;
  font-size: t.$font-size;
  font-weight: t.$font-weight;
  color: t.$color-text-primary;
  overflow: auto;
  direction: t.$direction;
  font-feature-settings: t.$font-feature-settings;

  --stack-gap-default: #{t.$space-4};
}

